# prj-python

./: .env  .gitignore  README.md  README_legacy.md  app-exec.json  app_settings.json  cleandir.ps1  comeback.ps1  create_structure.ps1  dumper.py  getos.py  gui.py  logic.py  parser_vision.py  pyproject.toml  query  stop  syncto.ps1  test.py  test_poetry.py  utiles.py
app/dmig-agent/: build.py  main.py  pino.py  requirements.txt  (+1 more)
c-modules/pobrowser/: README.md  pyproject.toml
c-modules/pobrowser/src/ro-browser/: ro-browser.py
c-scanred/: netscan-advanced.py  netscan-byttl.py  netscan-fabric.py  netscan-reportlab.py  network-scanner-1.py  network-scanner.py  network_scan_20241117_181617.csv  network_scan_20241117_181824.csv
facret/: .gitignore  CONTRACTS_DESIGN.md  ESTRUCTURA_COMPONENTES.md  FLET_BASE_PROMPT.md  INDICE_DOCUMENTACION.md  MQTT_MONITOR_PROMPT.md  PLAN_LIMPIEZA.md  README.md  RESUMEN_EJECUTIVO.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
facret/_legacy/: ARQUITECTURA_RAPIDA.md  ESTRUCTURA_VISUAL.md
facret/_legacy/src/: gui.py
facret/_legacy/src/components/: drive_header.py  sync_status.py
facret/_legacy/src/logic/: logic.py
facret/_legacy/src/models/: models.py
facret/_legacy/src/utils/: helpers.py  utiles.py
facret/data/: agencias.json
facret/data/contracts/: ETAPA-RE1.json
facret/scripts/: build_desktop.py  build_mobile.py
facret/src/: drive_gui.py  gui.py  gui2.py  main.py  main2.py  main3.py  main_drive.py  navrail.py  run_desktop.py
facret/src/components/: app_bar.py  content.py  content_router.py  drive_content.py  drive_header.py  drive_sidebar.py  drive_toolbar.py  facs_downloader_panel.py  file_explorer.py  nav_rail.py  preview_panel.py  settings_panel.py  sidebar.py  sync_status.py  toolbar.py
facret/src/components/header/: app_brand.py  responsive_header.py  search_component.py  tools_component.py  user_session.py
facret/src/components/layout/: appbar.py  breadcrumb.py  main_layout.py  sidebar.py
facret/src/components/navigation/: menu_items.py  navigation_handler.py
facret/src/config/: constants.py  drive_theme.py  facs_config.json  gradients.json  menu_config.py  menu_structure.py  settings.py  theme.py
facret/src/core/models/: app_state.py  file_model.py  xml_model.py
facret/src/core/services/: __init__.py  duplicate_service.py  file_service.py  rename_service.py  xml_service.py
facret/src/core/utils/: file_utils.py  xml_utils.py
facret/src/logic/: contracts_loader.py  contracts_writer.py  facs_downloader.py  facs_manager.py  logic.py
facret/src/models/: __init__.py  models.py
facret/src/pages/: __init__.py  contracts_page.py  facs_downloader_page.py  facs_manager_page.py  general_page.py  home_page.py  notifications_page.py
facret/src/views/: duplicates_view.py  facturas_view.py  rename_xml_view.py
merge/: merge.py
parqueos-helper/: parqv01.py  registro_tiempos.csv
pdf-processor/: pdf-processor-01.py
src/: config.py  main.py  vision_extractor.py
(+11 files in other folders)
