[project]
name = "facret"
version = "0.1.0"
description = "invoices and taxwidhtholdings processor"
authors = [
    {name = "carlos sigua",email = "carlos.sigua@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["flet (>=0.28.3,<0.29.0)", "flet-desktop (>=0.28.3,<0.29.0)"]

packages = [
    { include = "facret", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
