[build-system]
requires = ["flet"]

[project]
name = "facret"
version = "1.0.0"
description = "Sistema de Facturaci贸n Electr贸nica"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
dependencies = [
    "flet>=0.24.0",
    "lxml>=4.9.3",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0.4",
    "Pillow>=10.0.0"
]

[tool.flet]
name = "FACRET"
description = "Sistema de Facturaci贸n Electr贸nica"
icon = "src/assets/icons/app_icon.ico"

[tool.flet.android]
package = "com.facret.app"