[tool.poetry]
name = "facret"
version = "0.1.0"
description = "invoices and taxwidhtholdings processor"
authors = ["carlos sigua <carlos.sigua@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
flet = ">=0.28.3,<0.29.0"
flet-desktop = ">=0.28.3,<0.29.0"
pdf2image = ">=1.17.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"