[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ro-browser"
version = "0.0.1"
authors = [
  { name="Carlos Sigua", email="carlos.sigua@gmail.com" },
]
description = "A small package to open several files pdf with a browser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/carlossiguam/prj-python/tree/main/c-modules/pobrowser/src/ro-browser"
Issues = "https://github.com/pypa/sampleproject/issues"